// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots AnimatedLink AnimatedLink 1`] = `
<a
  className="sc-bdVaJa jDdHMZ"
  href="/undefined"
  onClick={[Function]}
  onMouseEnter={[Function]}
>
  here
</a>
`;

exports[`Storyshots AnimatedLink CardHeader 1`] = `
<header
  className="sc-htpNat mcGtW"
>
  here
</header>
`;

exports[`Storyshots AnimatedLink PosterImage 1`] = `
<div
  className="sc-bwzfXH fmUeyT"
>
  here
</div>
`;

exports[`Storyshots Compact Video Link Dark bg 1`] = `
<section
  className="sc-kgoBCf dYmCHy"
>
  <div
    className="sc-ifAKCX lcGsow"
  >
    <div
      className="sc-jTzLTM gptmUt sc-ifAKCX bTIbjp"
      width={
        Array [
          1,
          1,
          1,
          1,
          0.5,
          0.3333333333333333,
        ]
      }
    >
      <div>
        <div
          className="sc-EHOje cUjftw"
        >
          <div
            className="sc-bZQynM hHdFtZ"
          >
            <a
              className="sc-cSHVUG kKMZZz"
              color="#fff"
              href="https://www.youtube.com/watch?v=IeuuBKBb4Wg"
              opacity={0.5}
              rel="noopener noreferrer"
              target="_blank"
            >
              <div
                className="sc-kAzzGY bOfWLD"
              >
                <div
                  className="sc-EHOje cXsIeh"
                >
                  <img
                    alt="Play button"
                    className="sc-fjdhpX kJcdFF"
                    src="test-file-stub"
                  />
                </div>
                <p
                  className="sc-jzJRlG hEfZsr"
                  color="#fff"
                  opacity={0.5}
                >
                  Manipulating the Web Audio API with JSX and Custom Renderers - James Wright
                </p>
              </div>
            </a>
          </div>
        </div>
      </div>
    </div>
  </div>
</section>
`;

exports[`Storyshots Compact Video Link Grey bg 1`] = `
<section
  className="sc-kGXeez hZYiKC"
>
  <div
    className="sc-ifAKCX lcGsow"
  >
    <div
      className="sc-jTzLTM gptmUt sc-ifAKCX bTIbjp"
      width={
        Array [
          1,
          1,
          1,
          1,
          0.5,
          0.3333333333333333,
        ]
      }
    >
      <div>
        <div
          className="sc-EHOje cUjftw"
        >
          <div
            className="sc-bZQynM hHdFtZ"
          >
            <a
              className="sc-cSHVUG kKMZZz"
              color="#333333"
              href="https://www.youtube.com/watch?v=IeuuBKBb4Wg"
              opacity={1}
              rel="noopener noreferrer"
              target="_blank"
            >
              <div
                className="sc-kAzzGY bOfWLD"
              >
                <div
                  className="sc-EHOje cXsIeh"
                >
                  <img
                    alt="Play button"
                    className="sc-fjdhpX kJcdFF"
                    src="test-file-stub"
                  />
                </div>
                <p
                  className="sc-jzJRlG dfhzHC"
                  color="#333333"
                  opacity={1}
                >
                  Manipulating the Web Audio API with JSX and Custom Renderers - James Wright
                </p>
              </div>
            </a>
          </div>
        </div>
      </div>
    </div>
  </div>
</section>
`;

exports[`Storyshots Compact Video Link Multiple components 1`] = `
<div
  className="sc-ifAKCX lcGsow"
>
  <div
    className="sc-jTzLTM gptmUt sc-ifAKCX bTIbjp"
    width={
      Array [
        1,
        1,
        1,
        1,
        0.5,
        0.3333333333333333,
      ]
    }
  >
    <div>
      <div
        className="sc-EHOje cUjftw"
      >
        <div
          className="sc-bZQynM hHdFtZ"
        >
          <a
            className="sc-cSHVUG kKMZZz"
            color="#333333"
            href="https://www.youtube.com/watch?v=IeuuBKBb4Wg"
            opacity={1}
            rel="noopener noreferrer"
            target="_blank"
          >
            <div
              className="sc-kAzzGY bOfWLD"
            >
              <div
                className="sc-EHOje cXsIeh"
              >
                <img
                  alt="Play button"
                  className="sc-fjdhpX kJcdFF"
                  src="test-file-stub"
                />
              </div>
              <p
                className="sc-jzJRlG dfhzHC"
                color="#333333"
                opacity={1}
              >
                Manipulating the Web Audio API with JSX and Custom Renderers - James Wright
              </p>
            </div>
          </a>
        </div>
      </div>
    </div>
  </div>
  <div
    className="sc-jTzLTM gptmUt sc-ifAKCX bTIbjp"
    width={
      Array [
        1,
        1,
        1,
        1,
        0.5,
        0.3333333333333333,
      ]
    }
  >
    <div>
      <div
        className="sc-EHOje cUjftw"
      >
        <div
          className="sc-bZQynM hHdFtZ"
        >
          <a
            className="sc-cSHVUG kKMZZz"
            color="#333333"
            href="https://www.youtube.com/watch?v=IeuuBKBb4Wg"
            opacity={1}
            rel="noopener noreferrer"
            target="_blank"
          >
            <div
              className="sc-kAzzGY bOfWLD"
            >
              <div
                className="sc-EHOje cXsIeh"
              >
                <img
                  alt="Play button"
                  className="sc-fjdhpX kJcdFF"
                  src="test-file-stub"
                />
              </div>
              <p
                className="sc-jzJRlG dfhzHC"
                color="#333333"
                opacity={1}
              >
                Some smaller title
              </p>
            </div>
          </a>
        </div>
      </div>
    </div>
  </div>
  <div
    className="sc-jTzLTM gptmUt sc-ifAKCX bTIbjp"
    width={
      Array [
        1,
        1,
        1,
        1,
        0.5,
        0.3333333333333333,
      ]
    }
  >
    <div>
      <div
        className="sc-EHOje cUjftw"
      >
        <div
          className="sc-bZQynM hHdFtZ"
        >
          <a
            className="sc-cSHVUG kKMZZz"
            color="#333333"
            href="https://www.youtube.com/watch?v=IeuuBKBb4Wg"
            opacity={1}
            rel="noopener noreferrer"
            target="_blank"
          >
            <div
              className="sc-kAzzGY bOfWLD"
            >
              <div
                className="sc-EHOje cXsIeh"
              >
                <img
                  alt="Play button"
                  className="sc-fjdhpX kJcdFF"
                  src="test-file-stub"
                />
              </div>
              <p
                className="sc-jzJRlG dfhzHC"
                color="#333333"
                opacity={1}
              >
                Some smaller title
              </p>
            </div>
          </a>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Storyshots Compact Video Link Single component 1`] = `
<div
  className="sc-ifAKCX lcGsow"
>
  <div
    className="sc-jTzLTM gptmUt sc-ifAKCX bTIbjp"
    width={
      Array [
        1,
        1,
        1,
        1,
        0.5,
        0.3333333333333333,
      ]
    }
  >
    <div>
      <div
        className="sc-EHOje cUjftw"
      >
        <div
          className="sc-bZQynM hHdFtZ"
        >
          <a
            className="sc-cSHVUG kKMZZz"
            color="#333333"
            href="https://www.youtube.com/watch?v=IeuuBKBb4Wg"
            opacity={1}
            rel="noopener noreferrer"
            target="_blank"
          >
            <div
              className="sc-kAzzGY bOfWLD"
            >
              <div
                className="sc-EHOje cXsIeh"
              >
                <img
                  alt="Play button"
                  className="sc-fjdhpX kJcdFF"
                  src="test-file-stub"
                />
              </div>
              <p
                className="sc-jzJRlG dfhzHC"
                color="#333333"
                opacity={1}
              >
                Manipulating the Web Audio API with JSX and Custom Renderers - James Wright
              </p>
            </div>
          </a>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Storyshots CookieBanner CookieBanner 1`] = `
<div
  className="sc-kpOJdX dujtND"
>
  <p
    className="sc-dxgOiQ hMJUeD"
  >
    By continuing to use our site you agree to the use of cookies in accordance with our
     
    <a
      className="sc-jKJlTe cbdxVA"
      href="/cookie-policy"
      onClick={[Function]}
      onMouseEnter={[Function]}
    >
      Cookie
    </a>
    ,
     
    <a
      className="sc-jKJlTe cbdxVA"
      href="/privacy-policy"
      onClick={[Function]}
      onMouseEnter={[Function]}
    >
      Privacy
    </a>
     and
     
    <a
      className="sc-jKJlTe cbdxVA"
      href="/data-retention-policy"
      onClick={[Function]}
      onMouseEnter={[Function]}
    >
      Data-retention
    </a>
     
    policies.
  </p>
  <button
    className="sc-ckVGcZ hpZsaX"
  >
    I agree
  </button>
</div>
`;

exports[`Storyshots Form Button 1`] = `
<button
  className="sc-kkGfuU ckYiRQ"
>
  Click Me
</button>
`;

exports[`Storyshots Form Checkbox 1`] = `
<section
  className="sc-hSdWYo heWctq"
>
  <input
    className="sc-eNQAEJ dBsjhT"
    id="checkbox"
    name="checkbox"
    type="checkbox"
  />
  <label
    htmlFor="checkbox"
  >
    Label
  </label>
</section>
`;

exports[`Storyshots Form Field 1`] = `
<section
  className="sc-iAyFgw loeUlM"
>
  <input
    className="sc-hMqMXs bczBDs"
    placeholder="test"
    type="text"
  />
</section>
`;

exports[`Storyshots Form Fieldset 1`] = `
<section
  className="sc-hSdWYo heWctq"
>
  <input
    className="sc-hMqMXs bczBDs"
    placeholder="test"
    type="text"
  />
</section>
`;

exports[`Storyshots Form Input 1`] = `
<input
  className="sc-hMqMXs bczBDs"
  placeholder="test"
  type="text"
/>
`;

exports[`Storyshots Form Label 1`] = `
<label
  className="sc-kEYyzF cTriVg"
>
  Label
</label>
`;

exports[`Storyshots Standalone Video Link Dark bg 1`] = `
<section
  className="sc-kgoBCf dYmCHy"
>
  <div
    className="sc-ifAKCX lcGsow"
  >
    <div
      className="sc-jTzLTM gptmUt sc-ifAKCX bTIbjp"
      width={
        Array [
          1,
          1,
          1,
          1,
          0.5,
          0.3333333333333333,
        ]
      }
    >
      <div
        className="sc-chPdSV eXWVzH"
      >
        <div
          className="sc-EHOje cUjftw"
        >
          <div
            className="sc-bZQynM jmIaZk"
          >
            <a
              className="sc-cSHVUG kKMZZz"
              color="#fff"
              href="https://www.youtube.com/watch?v=IeuuBKBb4Wg"
              opacity={0.5}
              rel="noopener noreferrer"
              target="_blank"
            >
              <div
                className="sc-kAzzGY bOfWLD"
              >
                <div
                  className="sc-EHOje cXsIeh"
                >
                  <img
                    alt="Play button"
                    className="sc-fjdhpX kJcdFF"
                    src="test-file-stub"
                  />
                </div>
                <p
                  className="sc-jzJRlG hEfZsr"
                  color="#fff"
                  opacity={0.5}
                >
                  Manipulating the Web Audio API with JSX and Custom Renderers - James Wright
                </p>
              </div>
            </a>
          </div>
        </div>
      </div>
    </div>
  </div>
</section>
`;

exports[`Storyshots Standalone Video Link Grey bg 1`] = `
<section
  className="sc-kGXeez hZYiKC"
>
  <div
    className="sc-ifAKCX lcGsow"
  >
    <div
      className="sc-jTzLTM gptmUt sc-ifAKCX bTIbjp"
      width={
        Array [
          1,
          1,
          1,
          1,
          0.5,
          0.3333333333333333,
        ]
      }
    >
      <div
        className="sc-chPdSV eXWVzH"
      >
        <div
          className="sc-EHOje cUjftw"
        >
          <div
            className="sc-bZQynM jmIaZk"
          >
            <a
              className="sc-cSHVUG kKMZZz"
              color="#333333"
              href="https://www.youtube.com/watch?v=IeuuBKBb4Wg"
              opacity={1}
              rel="noopener noreferrer"
              target="_blank"
            >
              <div
                className="sc-kAzzGY bOfWLD"
              >
                <div
                  className="sc-EHOje cXsIeh"
                >
                  <img
                    alt="Play button"
                    className="sc-fjdhpX kJcdFF"
                    src="test-file-stub"
                  />
                </div>
                <p
                  className="sc-jzJRlG dfhzHC"
                  color="#333333"
                  opacity={1}
                >
                  Manipulating the Web Audio API with JSX and Custom Renderers - James Wright
                </p>
              </div>
            </a>
          </div>
        </div>
      </div>
    </div>
  </div>
</section>
`;

exports[`Storyshots Standalone Video Link Multiple components 1`] = `
<div
  className="sc-ifAKCX lcGsow"
>
  <div
    className="sc-jTzLTM gptmUt sc-ifAKCX bTIbjp"
    width={
      Array [
        1,
        1,
        1,
        1,
        0.5,
        0.3333333333333333,
      ]
    }
  >
    <div
      className="sc-chPdSV eXWVzH"
    >
      <div
        className="sc-EHOje cUjftw"
      >
        <div
          className="sc-bZQynM jmIaZk"
        >
          <a
            className="sc-cSHVUG kKMZZz"
            color="#333333"
            href="https://www.youtube.com/watch?v=IeuuBKBb4Wg"
            opacity={1}
            rel="noopener noreferrer"
            target="_blank"
          >
            <div
              className="sc-kAzzGY bOfWLD"
            >
              <div
                className="sc-EHOje cXsIeh"
              >
                <img
                  alt="Play button"
                  className="sc-fjdhpX kJcdFF"
                  src="test-file-stub"
                />
              </div>
              <p
                className="sc-jzJRlG dfhzHC"
                color="#333333"
                opacity={1}
              >
                Manipulating the Web Audio API with JSX and Custom Renderers - James Wright
              </p>
            </div>
          </a>
        </div>
      </div>
    </div>
  </div>
  <div
    className="sc-jTzLTM gptmUt sc-ifAKCX bTIbjp"
    width={
      Array [
        1,
        1,
        1,
        1,
        0.5,
        0.3333333333333333,
      ]
    }
  >
    <div
      className="sc-chPdSV eXWVzH"
    >
      <div
        className="sc-EHOje cUjftw"
      >
        <div
          className="sc-bZQynM jmIaZk"
        >
          <a
            className="sc-cSHVUG kKMZZz"
            color="#333333"
            href="https://www.youtube.com/watch?v=IeuuBKBb4Wg"
            opacity={1}
            rel="noopener noreferrer"
            target="_blank"
          >
            <div
              className="sc-kAzzGY bOfWLD"
            >
              <div
                className="sc-EHOje cXsIeh"
              >
                <img
                  alt="Play button"
                  className="sc-fjdhpX kJcdFF"
                  src="test-file-stub"
                />
              </div>
              <p
                className="sc-jzJRlG dfhzHC"
                color="#333333"
                opacity={1}
              >
                Some smaller title
              </p>
            </div>
          </a>
        </div>
      </div>
    </div>
  </div>
  <div
    className="sc-jTzLTM gptmUt sc-ifAKCX bTIbjp"
    width={
      Array [
        1,
        1,
        1,
        1,
        0.5,
        0.3333333333333333,
      ]
    }
  >
    <div
      className="sc-chPdSV eXWVzH"
    >
      <div
        className="sc-EHOje cUjftw"
      >
        <div
          className="sc-bZQynM jmIaZk"
        >
          <a
            className="sc-cSHVUG kKMZZz"
            color="#333333"
            href="https://www.youtube.com/watch?v=IeuuBKBb4Wg"
            opacity={1}
            rel="noopener noreferrer"
            target="_blank"
          >
            <div
              className="sc-kAzzGY bOfWLD"
            >
              <div
                className="sc-EHOje cXsIeh"
              >
                <img
                  alt="Play button"
                  className="sc-fjdhpX kJcdFF"
                  src="test-file-stub"
                />
              </div>
              <p
                className="sc-jzJRlG dfhzHC"
                color="#333333"
                opacity={1}
              >
                Some smaller title
              </p>
            </div>
          </a>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Storyshots Standalone Video Link Single component 1`] = `
<div
  className="sc-ifAKCX lcGsow"
>
  <div
    className="sc-jTzLTM gptmUt sc-ifAKCX bTIbjp"
    width={
      Array [
        1,
        1,
        1,
        1,
        0.5,
        0.3333333333333333,
      ]
    }
  >
    <div
      className="sc-chPdSV eXWVzH"
    >
      <div
        className="sc-EHOje cUjftw"
      >
        <div
          className="sc-bZQynM jmIaZk"
        >
          <a
            className="sc-cSHVUG kKMZZz"
            color="#333333"
            href="https://www.youtube.com/watch?v=IeuuBKBb4Wg"
            opacity={1}
            rel="noopener noreferrer"
            target="_blank"
          >
            <div
              className="sc-kAzzGY bOfWLD"
            >
              <div
                className="sc-EHOje cXsIeh"
              >
                <img
                  alt="Play button"
                  className="sc-fjdhpX kJcdFF"
                  src="test-file-stub"
                />
              </div>
              <p
                className="sc-jzJRlG dfhzHC"
                color="#333333"
                opacity={1}
              >
                Manipulating the Web Audio API with JSX and Custom Renderers - James Wright
              </p>
            </div>
          </a>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Storyshots Typography H2 1`] = `
<h2
  className="sc-htoDjs dhBWJz"
>
  Large title
</h2>
`;

exports[`Storyshots Typography H2 small 1`] = `
<h2
  className="sc-htoDjs icPmvC"
>
  Large title
</h2>
`;

exports[`Storyshots Typography Large Body 1`] = `
<h3
  className="sc-dnqmqq ksbQxw"
>
  Large Body
</h3>
`;

exports[`Storyshots Typography Large Body muted 1`] = `
<h3
  className="sc-dnqmqq dvbqDT"
  muted={true}
>
  Large Body
</h3>
`;

exports[`Storyshots Typography Large Body regular 1`] = `
<h3
  className="sc-dnqmqq elPQpF"
>
  Large Body
</h3>
`;

exports[`Storyshots Typography Large Body reverse 1`] = `
<h3
  className="sc-dnqmqq jczpoI"
>
  Large Body
</h3>
`;

exports[`Storyshots Typography Large title 1`] = `
<h1
  className="sc-gzVnrw fRQSpj"
>
  Large title
</h1>
`;

exports[`Storyshots Typography Large title center 1`] = `
<h1
  className="sc-gzVnrw gbCyMb"
>
  Large title
</h1>
`;

exports[`Storyshots Typography Large title muted 1`] = `
<h1
  className="sc-gzVnrw hDXHMj"
  muted={true}
>
  Large title
</h1>
`;

exports[`Storyshots Typography Large title regular 1`] = `
<h1
  className="sc-gzVnrw epRaVa"
>
  Large title
</h1>
`;

exports[`Storyshots Typography Large title reverse 1`] = `
<h1
  className="sc-gzVnrw dtdoyj"
>
  Large title
</h1>
`;

exports[`Storyshots Typography Paragraph 1`] = `
<p
  className="sc-VigVT fnyYKG"
>
  Paragraph
</p>
`;

exports[`Storyshots Typography Paragraph bold 1`] = `
<p
  className="sc-VigVT eJIkeC"
>
  Paragraph
</p>
`;

exports[`Storyshots Typography Paragraph center 1`] = `
<p
  className="sc-VigVT esJEpZ"
>
  Paragraph
</p>
`;

exports[`Storyshots Typography Paragraph fullWidth 1`] = `
<p
  className="sc-VigVT ipQHPu"
>
  Paragraph
</p>
`;

exports[`Storyshots Typography Paragraph muted 1`] = `
<p
  className="sc-VigVT cptadN"
  muted={true}
>
  Paragraph
</p>
`;

exports[`Storyshots Typography Paragraph noMargin 1`] = `
<p
  className="sc-VigVT hJjEgO"
>
  Paragraph
</p>
`;

exports[`Storyshots Typography Paragraph padded 1`] = `
<p
  className="sc-VigVT jDzxck"
>
  Paragraph
</p>
`;

exports[`Storyshots Typography Paragraph reverse 1`] = `
<p
  className="sc-VigVT kbaEXL"
>
  Paragraph
</p>
`;

exports[`Storyshots Typography Paragraph secondary 1`] = `
<p
  className="sc-VigVT kBufcF"
>
  Paragraph
</p>
`;

exports[`Storyshots Typography Small Title 1 1`] = `
<h4
  className="sc-iwsKbI dqVjOi"
>
  Small Title
</h4>
`;

exports[`Storyshots Typography Small Title 1 muted 1`] = `
<h4
  className="sc-iwsKbI jJqUwC"
  muted={true}
>
  Small Title
</h4>
`;

exports[`Storyshots Typography Small Title 1 noMargin 1`] = `
<h4
  className="sc-iwsKbI bddwsm"
>
  Small Title
</h4>
`;

exports[`Storyshots Typography Small Title 1 reverse 1`] = `
<h4
  className="sc-iwsKbI dxnfhI"
>
  Small Title
</h4>
`;

exports[`Storyshots Typography Small Title 2 1`] = `
<h5
  className="sc-gZMcBi drxhiy"
>
  Small Title
</h5>
`;

exports[`Storyshots Typography Small Title 2 noBottom 1`] = `
<h5
  className="sc-gZMcBi lhnMON"
>
  Small Title
</h5>
`;

exports[`Storyshots Typography Small Title 2 noMargin 1`] = `
<h5
  className="sc-gZMcBi gclYts"
>
  Small Title
</h5>
`;

exports[`Storyshots Typography Small Title 2 noTop 1`] = `
<h5
  className="sc-gZMcBi cvBzXi"
>
  Small Title
</h5>
`;

exports[`Storyshots Typography Small Title 2 noWrap 1`] = `
<h5
  className="sc-gZMcBi hhqKvh"
>
  Small Title
</h5>
`;

exports[`Storyshots Typography Small Title 2 reverse 1`] = `
<h5
  className="sc-gZMcBi ijfNWL"
>
  Small Title
</h5>
`;

exports[`Storyshots Typography Small Title 3 1`] = `
<h6
  className="sc-gqjmRU hWvAYD"
>
  Small Title
</h6>
`;

exports[`Storyshots Typography Small Title 3 muted 1`] = `
<h6
  className="sc-gqjmRU gHXjNW"
  muted={true}
>
  Small Title
</h6>
`;

exports[`Storyshots Typography Small Title 3 noMargin 1`] = `
<h6
  className="sc-gqjmRU etfboL"
>
  Small Title
</h6>
`;

exports[`Storyshots Typography Small Title 3 reverse 1`] = `
<h6
  className="sc-gqjmRU llgSkP"
>
  Small Title
</h6>
`;

exports[`Storyshots Typography Small Title 3 underline 1`] = `
<h6
  className="sc-gqjmRU hWvAYD"
>
  Small Title
</h6>
`;
